--- a/scroll.css
+++ b/scroll.css
@@ -106,8 +106,8 @@ section.dev{
 }
 
 @media only screen
-    and (min-width: 375px)
-    and (min-height : 667px)
+    and (device-width: 375px)
+    and (device-height : 667px)
     and (-webkit-device-pixel-ratio : 2) {
   #indicatorContainer #navGroup {
     height: 25px;
