disabled refresh swipe in chrome mobile browser

--- a/scroll.css
+++ b/scroll.css
@@ -135,7 +135,9 @@ section.dev{
   }
 
   body {
-    background-color: #454545
+    background-color: #454545;
+    overscroll-behavior-y: contain;
+
   }
 
   body div.videoWrapper {
